[TD-698] Process dynamically all connectors in development, build and tests tasks (#608)

--- a/.custom/bump.cfg
+++ b/.custom/bump.cfg
@@ -1,30 +1,13 @@
-connectors/python/tabsdata_databricks/tabsdata_databricks/assets/manifest/RELEASE-NOTES
-connectors/python/tabsdata_databricks/tabsdata_databricks/assets/manifest/THIRD-PARTY
-connectors/python/tabsdata_databricks/tabsdata_databricks/assets/manifest/VERSION
-requirements/requirements-connector-databricks.txt
-connectors/python/tabsdata_mongodb/tabsdata_mongodb/assets/manifest/RELEASE-NOTES
-connectors/python/tabsdata_mongodb/tabsdata_mongodb/assets/manifest/THIRD-PARTY
-connectors/python/tabsdata_mongodb/tabsdata_mongodb/assets/manifest/VERSION
-requirements/requirements-connector-mongodb.txt
-connectors/python/tabsdata_salesforce/tabsdata_salesforce/assets/manifest/RELEASE-NOTES
-connectors/python/tabsdata_salesforce/tabsdata_salesforce/assets/manifest/THIRD-PARTY
-connectors/python/tabsdata_salesforce/tabsdata_salesforce/assets/manifest/VERSION
-requirements/requirements-connector-salesforce.txt
-connectors/python/tabsdata_snowflake/tabsdata_snowflake/assets/manifest/RELEASE-NOTES
-connectors/python/tabsdata_snowflake/tabsdata_snowflake/assets/manifest/THIRD-PARTY
-connectors/python/tabsdata_snowflake/tabsdata_snowflake/assets/manifest/VERSION
-requirements/requirements-connector-snowflake.txt
-requirements/requirements-connector-all.txt
-requirements/requirements-dev-first-party.txt
-requirements/requirements-first-party.txt
 assets/manifest/THIRD-PARTY_connectors
 assets/manifest/VERSION
 client/td-sdk/tabsdata/assets/manifest/RELEASE-NOTES
-connectors/python/tabsdata_databricks/tabsdata_databricks/VERSION
-connectors/python/tabsdata_mongodb/tabsdata_mongodb/VERSION
-connectors/python/tabsdata_salesforce/tabsdata_salesforce/VERSION
-connectors/python/tabsdata_snowflake/tabsdata_snowflake/VERSION
+connectors/python/*/*/assets/manifest/RELEASE-NOTES
+connectors/python/*/*/assets/manifest/THIRD-PARTY
+connectors/python/*/*/assets/manifest/VERSION
+connectors/python/*/*/VERSION
+requirements/requirements-dev-first-party.txt
+requirements/requirements-first-party.txt
+server/libraries/td-supervisor/src/services/bootloader.rs
 server/libraries/td-supervisor/src/services/supervisor.rs
 server/libraries/td-supervisor/src/services/tdserver.rs
-server/libraries/td-supervisor/src/services/bootloader.rs
 variant/assets/manifest/RELEASE-NOTES
