--- a/Makeroot.toml
+++ b/Makeroot.toml
@@ -76,6 +76,7 @@ MAKE_LIBRARIES_PATH = { value = "${ROOT_PROJECT_TABSDATA_FOLDER}/make/libraries"
 BUMP_VERSION_PY = { value = "${ROOT_PROJECT_TABSDATA_FOLDER}/devutils/automation/tasks/makers/td-scripts/bump_version.py", normalize = true }
 CLEAN_PY = { value = "${ROOT_PROJECT_TABSDATA_FOLDER}/devutils/automation/tasks/makers/td-scripts/clean.py", normalize = true }
 COPY_ASSETS_PY = { value = "${ROOT_PROJECT_TABSDATA_FOLDER}/devutils/automation/tasks/makers/td-scripts/copy_assets.py", normalize = true }
+LOCK_REQUIREMENTS_PY = { value = "${ROOT_PROJECT_TABSDATA_FOLDER}/devutils/automation/tasks/makers/td-scripts/lock_requirements.py", normalize = true }
 
 VIRTUAL_PIP = { value = "${ROOT_PROJECT_TABSDATA_FOLDER}/client/td-sdk/.venv/bin/pip", normalize = true }
 VIRTUAL_ACTIVATE = { value = "${ROOT_PROJECT_TABSDATA_FOLDER}/client/td-sdk/.venv/bin/activate", normalize = true }
