--- a/expansions/polars/modules/ty-tableframe/pyproject.toml
+++ b/expansions/polars/modules/ty-tableframe/pyproject.toml
@@ -43,13 +43,16 @@ known_first_party = [
     "tabsdata_mongodb",
     "tabsdata_salesforce",
     "tabsdata_snowflake",
-    "tests_tabsdata",
-    "tests_tabsdata_databricks",
-    "tests_tabsdata_mongodb",
-    "tests_tabsdata_salesforce",
-    "tests_tabsdata_snowflake",
+    "ta_features",
+    "ta_tableframe",
+    "td_sdk",
+    "te_examples",
+    "te_tableframe",
     "tests_ta_features",
     "tests_ta_tableframe",
+    "tests_tabsdata",
     "tests_te_examples",
     "tests_te_tableframe",
+    "tests_ty_tableframe",
+    "ty_tableframe",
 ]
