--- a/requirements/requirements-dev-third-party.txt
+++ b/requirements/requirements-dev-third-party.txt
@@ -47,6 +47,7 @@ python-dateutil==2.9.0.post0
 setuptools==78.1.1
 supervisor==4.2.5
 tabulate==0.9.0
+tomlkit==0.13.3
 tqdm==4.67.1
 twine==6.1.0
 uvicorn==0.35.0
