--- a/connectors/python/tabsdata_mongodb/pytest.ini
+++ b/connectors/python/tabsdata_mongodb/pytest.ini
@@ -1,5 +1,5 @@
 #
-# Copyright 2024 Tabs Data Inc.
+# Copyright 2025 Tabs Data Inc.
 #
 
 [pytest]
@@ -21,9 +21,10 @@ markers =
     postgres: mark test as requiring a postgresql docker container.
     requires_internet: mark those tests that require an Internet connection to be run.
     salesforce: mark tests that require the tabsdata_salesforce package.
-    snowflake: mark tests that require the tabsdata_snowflake package.
     slow: mark test as slow.
+    snowflake: mark tests that require the tabsdata_snowflake package.
     tableframe: mark a test that validates the TableFrame API.
+    tabsdata: requires tabsdata server to be started
 
 addopts = --tb=short
 
