--- a/make/fragments/tasks/lock_py.toml
+++ b/make/fragments/tasks/lock_py.toml
@@ -12,10 +12,7 @@ run_task = [
         "lock_py_te_examples",
         "lock_py_te_tableframe",
         "lock_py_tabsdata",
-        "lock_py_tabsdata_databricks",
-        "lock_py_tabsdata_mongodb",
-        "lock_py_tabsdata_salesforce",
-        "lock_py_tabsdata_snowflake",
+        "lock_py_connectors",
     ] }
 ]
 
@@ -49,18 +46,19 @@ script = [
     exec --fail-on-error python ${LOCK_REQUIREMENTS_PY} ${PROJECT_TABSDATA_ROOT_FOLDER}
     ''']
 
-[tasks.lock_py_tabsdata_databricks]
-category = "02 - Tidy"
+[tasks.lock_py_connectors]
+category = "01 - Tidy"
 private = true
+script_runner = "@duckscript"
+script = [
+    '''
+    !include_files ./make/libraries/log.ds
 
-[tasks.lock_py_tabsdata_mongodb]
-category = "02 - Tidy"
-private = true
+    connectors = glob_array ${CONNECTORS_PY_ROOT_FOLDER}/tabsdata_*
 
-[tasks.lock_py_tabsdata_salesforce]
-category = "02 - Tidy"
-private = true
-
-[tasks.lock_py_tabsdata_snowflake]
-category = "02 - Tidy"
-private = true
+    for connector in ${connectors}
+        is_connector = is_dir ${connector}
+        if ${is_connector}
+        end
+    end
+    ''']
